--- a/Cube/Cube.vcxproj
+++ b/Cube/Cube.vcxproj
@@ -81,7 +81,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d3d11.lib;d3dx11d.lib;D3DCompiler.lib;Effects11d.lib;dxerr.lib;dxgi.lib;dxguid.lib;legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dx11d.lib;D3DCompiler.lib;Effects11d.lib;dxerr.lib;dxgi.lib;dxguid.lib;legacy_stdio_definitions.lib;Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderType>Effect</ShaderType>
@@ -136,6 +136,8 @@
     <ClCompile Include="..\..\Common\Waves.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="d3dObject.cpp" />
+    <ClCompile Include="MutexLock.cpp" />
+    <ClCompile Include="SoundEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Common\d3dApp.h" />
@@ -146,7 +148,9 @@
     <ClInclude Include="..\..\Common\MathHelper.h" />
     <ClInclude Include="BoxApp.h" />
     <ClInclude Include="d3dObject.h" />
+    <ClInclude Include="MutexLock.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SoundEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FX\color.fx" />
