--- a/Cube/Cube.vcxproj.filters
+++ b/Cube/Cube.vcxproj.filters
@@ -105,4 +105,7 @@
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
